[project]
name = "upyloadthing"
version = "0.2.1"
description = "Python client for the uploadthing API"
authors = [
    {name = "Fabrice Armisen",email = "farmisen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "setuptools (>=75.8.0,<76.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "sqids (>=0.5.1,<0.6.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pyright = "^1.1.393"
ptpython = "^3.0.29"
pytest = "^8.3.4"
respx = "^0.22.0"
pytest-asyncio = "^0.23.2"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
